			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: proper writing of variables in the normal terminal debugger.
    (Marc B).

  * FIXED: absolute_file_name/[3] to return order consistently.

  * ENHANCED: handling of redo in the debugger.

  * FIXED: sub_atom('1', _, _, 3, Sub) (2nd or 3th argument longer than
    atom).  Anjo Anjewierden.

  * FIXED: Prolog flag abort_with_exception to be true in multi-threaded
    version and make it read-only.  `Cosmetic' only.

  * FIXED: Compilation of (a, ! -> b) to cut the choicepoints of a.
    Sergey Tikhonov.

  * ADDED: MS-Windows: library(registry): win_flush_filetypes/0 to forward
    changes to registered types to the shell, so the proper icons are
    displayed.  Also used by the install-script to propagate the Prolog icon
    immediately.

  * FIXED: Source level debugger: ERROR: Arithmetic: `very_deep/0' is
    not a function.  David Reitter.

  * ENHANCED: library(check) only reports redefinition on modules that
    default to user and system (otherwise we are dealing with special
    purpose usage of the module system that must be handled seperately).

  * FIXED: Bug#92: pathname handling on paths like \\machine\c$\more\...
    Also, the argument to -s (script) is not expanded. Tolga Konik.

  * ADDED: Keep track of line-number where a module is defined (no public
    interface yet, available through '$module_property'(+Module, -Property).

  * FIXED: Bug#91: source level debugger generates error.  Holger Kanwischer.


VERSION 5.2.8 (Sep 13, 2003)
============================

  * ENHANCED: more consistency tests and replaced some old-style
    warnings with print_message/2 and exceptions in module handling.

  * FIXED: current_predicate(Name/Arity) with unbound Arity.  Dmitry.
