@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ENHANCED: more debugger issues.  Still unsatisfactory.
+
   * FIXED: proper writing of variables in the normal terminal debugger.
     (Marc B).
 
